crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@getattr.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "name: {{ user.name }}\nactive: {{ user.is_active }}"
info:
  user:
    is_active: true
    name: Peter
input_file: minijinja/tests/inputs/getattr.txt
---
name: Peter
active: true

