crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@inexpr.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ 1 in seq }}\n{{ \"missing\" in seq }}\n{{ 1 not in seq }}\n{{ \"missing\" not in seq }}"
info:
  seq:
    - 1
    - 2
    - 3
input_file: minijinja/tests/inputs/inexpr.txt
---
true
false
false
true

