crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@literals.txt.snap
---
source: crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{{ true }}\n{{ false }}\n{{ null }}\n{{ 1.0 }}\n{{ 2 }}\n{{ [1, 2, 3] }}\n{{ {\"foo\": \"bar\"} }}\n{{ -9223372036854775808 }}\n{{ -170141183460469231731687303715884105728 }}\n{{ 170141183460469231731687303715884105727 }}\n{{ 340282366920938463463374607431768211455 }}"
info: {}
input_file: crates/dbt-jinja/minijinja/tests/inputs/literals.txt
---
true
false

1.0
2
[1, 2, 3]
{'foo': 'bar'}
-9223372036854775808
170141183460469231731687303715884105728
170141183460469231731687303715884105727
340282366920938463463374607431768211455
