crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@loop_dictsort.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "key implied:\n{%- for key, value in map|dictsort %}\n* {{ key }}: {{ value }}\n{%- endfor %}\nkey explicit:\n{%- for key, value in map|dictsort(by=\"key\") %}\n* {{ key }}: {{ value }}\n{%- endfor %}\nvalue:\n{%- for key, value in map|dictsort(by=\"value\") %}\n* {{ key }}: {{ value }}\n{%- endfor %}\nreverse:\n{%- for key, value in map|dictsort(reverse=true) %}\n* {{ key }}: {{ value }}\n{%- endfor %}\ncase_sensitive:\n{%- for key, value in map|dictsort(case_sensitive=true) %}\n* {{ key }}: {{ value }}\n{%- endfor %}"
info:
  map:
    Blafasel: aha
    bar: 2
    baz: 100
    foo: 1
input_file: minijinja/tests/inputs/loop_dictsort.txt
---
key implied:
* bar: 2
* baz: 100
* Blafasel: aha
* foo: 1
key explicit:
* bar: 2
* baz: 100
* Blafasel: aha
* foo: 1
value:
* foo: 1
* bar: 2
* baz: 100
* Blafasel: aha
reverse:
* foo: 1
* Blafasel: aha
* baz: 100
* bar: 2
case_sensitive:
* Blafasel: aha
* bar: 2
* baz: 100
* foo: 1

